# LEO

./: .gitignore  README.md  pyproject.toml  requirements.txt  startup_commands.txt
data/: persona.json  persona_matrix.json
data/wakeword/: hey_leo.ppn
examples/: ollama_ping.py
models/openwakeword/: train_wakeword.py
scripts/: chat_cli.py  demo_tools.py  init_db.py  load_persona.py  load_persona_matrix.py  migrate_memories.py  promote_memory.py  run_server.py  show_persona.py  test-ddgs.py  test_porcupine.py  voice_agent.py
scripts/var/: leo.db
src/leo/: __init__.py  config.py
src/leo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/leo/clients/: __init__.py  embedding_client.py  home_assistant.py  ollama_client.py
src/leo/db/: __init__.py  database.py  schema.sql
src/leo/memory/: __init__.py  episodic.py  long_term.py  persona.py  preferences.py  reminders.py  sessions.py  tasks.py
src/leo/orchestrator/: __init__.py  personality.py  prompts.py  service.py
src/leo/tools/: __init__.py  base.py  context.py  email.py  gmail.py  homeassistant.py  registry.py  reminders.py  tasks.py  weather_gov.py  web.py
var/: leo.db
var/outbox/: email_20251120T172708564027.json  email_20251120T172855514138.json  email_20251120T173235531490.json  email_20251120T173714578642.json  email_20251120T173837187144.json  email_20251130T225922121643.json  email_20251130T225924890423.json  email_20251130T225928497722.json
