[project]
name = "leo"
version = "0.1.0"
description = "LEO - Local Executive Operator"
authors = [{name = "Henry Boes"}]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2.6",
    "duckduckgo-search>=6.2.6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
