[project]
name = "leo"
version = "0.1.0"
description = "LEO - Local Executive Operator"
authors = [{name = "Henry Boes"}]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2.6",
    "ddgs>=1.0.0",
    "faster-whisper>=1.0",
    "piper-tts>=1.2",
    "openwakeword>=0.6",
    "pvporcupine>=3.0",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "numpy>=1.26",
    "scipy>=1.11",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
